--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -39,7 +39,6 @@ dependencies:
   dio: ^5.9.0
   logging: ^1.3.0
   flutter_secure_storage: ^9.2.4
-  flutter_native_splash: ^2.4.7
   flutter_form_builder: ^10.2.0
   form_builder_validators: ^11.2.0
   image_picker: ^1.0.7
@@ -48,7 +47,15 @@ dependencies:
   latlong2: ^0.9.1  
   geolocator: ^14.0.2  
   url_launcher: ^6.2.0
-
+  
+  # ✅ FIX: Downgrade flutter_native_splash untuk kompatibilitas dengan excel
+  flutter_native_splash: ^2.4.1
+  
+  # ✅ Excel export packages
+  excel: ^4.0.6
+  permission_handler: ^11.0.1
+  open_filex: ^4.3.4
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
